[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/characters/enemies/tsurube-otoshi/TsurubeOtoshi.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/tilesets/world2/world2-tileset.tres" type="TileSet" id=3]
[ext_resource path="res://src/objects/cave-level/CaveDoorBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/objects/key/KamonKey.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/HUD/MobileControlsHUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/objects/cave-level-door/Door.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/levels/LevelBase.gd" type="Script" id=11]
[ext_resource path="res://src/objects/CaveDoorStart.tscn" type="PackedScene" id=12]

[node name="TsurubeOtoshiTestLevel" type="Node2D"]
script = ExtResource( 11 )
__meta__ = {
"_edit_vertical_guides_": [ 400.0 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobileControlsHUD" parent="." instance=ExtResource( 8 )]

[node name="TileMapBg" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="TileMapWorld" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -458735, 0, 0, -458734, 0, 0, -458733, 0, 0, -458732, 0, 0, -327682, 0, 0, -262146, 0, 0, -196610, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 0, 0, -262118, 0, 0, -262117, 0, 0, -262116, 0, 0, -262115, 0, 0, -262114, 0, 0, -131074, 0, 0, -196578, 0, 0, -65538, 0, 0, -131042, 0, 0, -2, 0, 0, -65531, 0, 0, -65530, 0, 0, -65506, 0, 0, 65534, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 30, 0, 0, 131070, 0, 0, 65541, 0, 0, 65542, 0, 0, 65566, 0, 0, 196606, 0, 0, 131077, 0, 0, 131078, 0, 0, 131102, 0, 0, 262142, 0, 0, 196613, 0, 0, 196614, 0, 0, 196638, 0, 0, 327678, 0, 0, 262149, 0, 0, 262150, 0, 0, 262174, 0, 0, 393214, 0, 0, 327685, 0, 0, 327686, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327710, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393221, 0, 0, 393222, 0, 0, 393246, 0, 0, 524286, 0, 0, 458757, 0, 0, 458758, 0, 0, 458782, 0, 0, 589822, 0, 0, 524289, 536870914, 0, 524293, 0, 0, 524294, 0, 0, 524318, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0 )

[node name="TileMapTraps" type="TileMap" parent="." groups=["trap"]]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
format = 1

[node name="Props" type="Node2D" parent="."]

[node name="DoorStart" parent="Props" instance=ExtResource( 12 )]
position = Vector2( 16, 128 )

[node name="CaveDoorBackground" parent="Props" instance=ExtResource( 6 )]
visible = false
position = Vector2( -240, -144 )

[node name="cave-door-background" parent="Props/CaveDoorBackground" index="0"]
position = Vector2( 1.52588e-05, 64 )
flip_v = true

[node name="InteractiveProps" type="Node" parent="."]

[node name="Door" parent="InteractiveProps" instance=ExtResource( 10 )]
position = Vector2( 448, 144 )

[node name="KamonKey" parent="InteractiveProps" instance=ExtResource( 7 )]
position = Vector2( 128, 48 )
frame = 1

[node name="EndTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Enemies" type="Node2D" parent="."]

[node name="TsurubeOtoshi2" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 96 )
horizontal_jump_velocity = 30
horizontal_direction = -1

[node name="TsurubeOtoshi3" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 0 )
horizontal_jump_velocity = 30

[connection signal="captured" from="InteractiveProps/KamonKey" to="." method="_on_Key_captured"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]

[editable path="Props/CaveDoorBackground"]
[editable path="InteractiveProps/Door"]
